# app/Http/Requests/Report/FilterRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Requests\Report;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class FilterRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\Rule|array|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'total_orders' => ['numeric'],
+            'total_profit' => ['numeric'],
+            'created_at' => ['date']
+        ];
+    }
+}
